[tool.poetry]
name = "pyinternetspeedtweetbot"
version = "0.1.0"
description = "Getting Internet Speed Infor via Twitter bot"
authors = ["Isomkevin <kevinisomcode1000@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^4.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
